crates/squawk_parser/tests/snapshots/tests__create_tablespace_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_tablespace.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_TABLESPACE
    CREATE_KW "create"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE
      IDENT "t"
    WHITESPACE " "
    LOCATION_KW "location"
    WHITESPACE " "
    LITERAL
      STRING "''"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_TABLESPACE
    CREATE_KW "create"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE
      IDENT "t"
    WHITESPACE " \n  "
    TABLESPACE_OWNER
      OWNER_KW "owner"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_ROLE
          CURRENT_ROLE_KW "current_role"
    WHITESPACE "\n  "
    LOCATION_KW "location"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE "\n  "
    WITH_PARAMS
      WITH_KW "with"
      WHITESPACE " "
      ATTRIBUTE_LIST
        L_PAREN "("
        WHITESPACE "\n    "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "seq_page_cost"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            LITERAL
              INT_NUMBER "10"
        COMMA ","
        WHITESPACE "\n    "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "random_page_cost"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            LITERAL
              INT_NUMBER "1"
        COMMA ","
        WHITESPACE "\n    "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "effective_io_concurrency"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            LITERAL
              INT_NUMBER "0"
        COMMA ","
        WHITESPACE "\n    "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "maintenance_io_concurrency"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            LITERAL
              INT_NUMBER "4"
        WHITESPACE "\n  "
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
