crates/squawk_parser/tests/snapshots/tests__create_text_search_dict_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_text_search_dict.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_DICTIONARY
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY
      PATH
        PATH_SEGMENT
          NAME_KW "name"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          TEMPLATE_KW "template"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "t"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_DICTIONARY
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT
          NAME_KW "name"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          TEMPLATE_KW "template"
        WHITESPACE "  "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "t"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "foo"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "bar"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "a"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "b"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
