crates/squawk_parser/tests/snapshots/tests__create_text_search_template_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_text_search_template.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_TEMPLATE
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    TEMPLATE_KW "template"
    WHITESPACE " "
    TEXT_SEARCH_TEMPLATE
      PATH
        PATH_SEGMENT
          NAME_KW "name"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "lexize"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                NAME_REF
                  IDENT "f"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_TEMPLATE
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    TEMPLATE_KW "template"
    WHITESPACE " "
    TEXT_SEARCH_TEMPLATE
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            NAME_REF
              IDENT "foo"
        DOT "."
        PATH_SEGMENT
          NAME_KW "name"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "INIT"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                NAME_REF
                  IDENT "init_function"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "lexize"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          PATH_TYPE
            PATH_REF
              PATH_SEGMENT_REF
                NAME_REF
                  IDENT "lexize_function"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
